<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white">

    <ImageButton
        android:id="@+id/incomeBackBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel_button"
        android:scaleType="centerCrop"
        android:src="@drawable/round_close_24"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:tint="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/AddIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="Add Income"
        android:textColor="@color/textColor"
        android:textSize="27sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:ellipsize="end"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etIncomeAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/add_expenses_bg"
        app:layout_constraintWidth_percent="0.75"
        android:gravity="center"
        android:hint="@string/_0"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:maxLength="5"
        app:layout_constraintTop_toBottomOf="@id/AddIncome"
        app:layout_constraintEnd_toEndOf="@id/AddIncome"
        app:layout_constraintStart_toStartOf="@id/AddIncome" />

    <LinearLayout
        android:id="@+id/IncomeCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.87"
        android:background="@drawable/expenses_bg"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/etIncomeAmount"
        app:layout_constraintStart_toStartOf="@id/etIncomeAmount"
        app:layout_constraintEnd_toEndOf="@id/etIncomeAmount"
        android:layout_marginTop="30dp">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/round_close_24"/>

        <EditText
            android:id="@+id/IncomeCategoryEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/category"
            android:inputType="textPersonName"
            android:maxLength="10" />

        <ImageButton
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/round_add_24"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:background="@android:color/transparent"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/IncomeToday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.87"
        android:background="@drawable/expenses_bg"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/IncomeCategory"
        app:layout_constraintStart_toStartOf="@id/IncomeCategory"
        app:layout_constraintEnd_toEndOf="@id/IncomeCategory"
        android:layout_marginTop="14dp">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/round_close_24"/>

        <EditText
            android:id="@+id/IncomeDayEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="start"
            android:maxLength="10"
            android:inputType="date"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:hint="@string/today"/>

        <ImageButton
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/outline_calendar_month_24"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/IncomeNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintWidth_percent="0.87"
        android:background="@drawable/expenses_bg"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/IncomeToday"
        app:layout_constraintStart_toStartOf="@id/IncomeToday"
        app:layout_constraintEnd_toEndOf="@id/IncomeToday"
        android:layout_marginTop="14dp">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/round_close_24"/>

        <EditText
            android:id="@+id/IncomeNoteEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="start"
            android:inputType="text"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:hint="@string/note"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIncomeSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.87"
        android:background="@drawable/gradient_bg"
        android:text="@string/save_btn"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:cornerRadius="24dp"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/IncomeNote"
        app:layout_constraintStart_toStartOf="@id/IncomeNote"
        app:layout_constraintTop_toBottomOf="@id/IncomeNote"
        app:layout_constraintVertical_bias="0.78"
        app:rippleColor="@android:color/white" />



</androidx.constraintlayout.widget.ConstraintLayout>